# tenmans_be

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  TODO.md  alembic.ini  create_admin.py  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_backend.sh  scrape_player_ranks.py
alembic/: env.py
alembic/versions/: 72714e929344_initial_deployment.py  aab9da6205e3_initial_migration.py
db-init/: create_test_db.sql  init.sql
migrations/: env.py
old_code/fixtures/: service.py
old_code/fixtures/MapPicker/: state_machine.py
old_code/old_code/fixtures/: utils.py
old_code/old_code/fixtures/MapPicker/: commands.py
scripts/: make_api_calls.py
src/: __init__.py  config.py  dump_db.py  main.py  make_api_calls.py
src/admin/: routes.py  schemas.py  service.py
src/audit/: context.py  models.py  schemas.py  service.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py
src/auth/service/: auth.py  identity.py  permission.py  role.py  status.py  token.py
src/auth/test/: routes.py
src/competitions/: base_schemas.py  schemas.py
src/competitions/fixtures/: routes.py  schemas.py  service.py
src/competitions/map_pool/: models.py  service.py
src/competitions/models/: fixtures.py  round.py  rounds.py  seasons.py  tournaments.py
src/competitions/rounds/: service.py
src/competitions/season/: dependencies.py  routes.py  service.py
src/competitions/tournament/: routes.py  schemas.py  service.py  standings.py
src/competitions/tournament/generation/: strategies.py  validators.py
src/db/: main.py
src/fixtures/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/fixtures/MapPicker/: commands.py  state_machine.py
src/maps/: models.py  routes.py  schema.py  schemas.py  service.py
src/matches/: models.py  schemas.py  service.py
src/moderation/: models.py  schemas.py
src/players/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/pugs/: models.py  schemas.py
src/roles/: models.py  service.py
src/seasons/: dependencies.py  models.py  routes.py  schemas.py  service.py
src/services/: admin.py  audit.py  auth.py  captain.py  fixture.py  identity.py  map.py  match.py  permission.py  role.py  roster.py  round.py  season.py  state.py  team.py  team_join_request.py  token.py  tournament.py  upload.py
src/services/status/: __init__.py  player.py
src/state/: service.py
src/status/: models.py  schemas.py  service.py  transition_validator.py
src/status/manager/: captain.py  join_request.py  player.py  roster.py  team.py
src/substitutes/: models.py  schemas.py
src/teams/: base_schemas.py  dependencies.py  models.py  routes.py  schemas.py  service.py
src/teams/join_request/: models.py  routes.py  schemas.py  service.py
src/teams/service/: captain.py  roster.py  team.py
src/upload/: models.py  routes.py  service.py
steam/: test.py
test/: conftest.py  state_machine_test.py  test_authentication.py  websocket_test_client.py
test/competitions/tournament/: test_fixtures.py  test_progression.py
test/teams/: test_joining_workflow.py
test/test/: conftest.py  test_authentication.py
test/test/competitions/tournament/: conftest.py  test_fixtures.py  test_generation.py  test_progression.py
utils/: alq.py  create_auth_token.py  scrape_player_ranks.py
utils/permissions/: auditor.py  cli.py  manager.py  reporter.py  sys_user.py  ui.py
utils/test_data/: generator.py
