[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs2-10mans-utils"
version = "0.1.0"
description = "Utility scripts for CS2 10mans system"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "projects"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.pytest.ini_options]
pythonpath = [
    "src",  # Add the main project source to Python path
    "utils"  # Add the utils directory
]

# This ensures utils can import from src/
[tool.hatch.build]
dev-mode-dirs = ["src"]

# Development dependencies
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-env>=0.8.1",
    "coverage>=7.2.3",
    
    # Linting & Formatting
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "flake8>=6.0.0",
    "pylint>=2.17.3",
    
    # Type checking
    "types-redis>=4.5.5.1",
    "types-passlib>=1.7.7.12",
    "types-python-jose>=3.3.4.7",

    # Async development tools
    "watchfiles>=0.24.0",
]

test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

docs = [
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.2.1",
]

[project.dependencies]
# Core Application Dependencies
fastapi = ">=0.115.3"
uvicorn = ">=0.32.0"
pydantic = ">=2.9.2"
sqlmodel = ">=0.0.16"
sqlalchemy = ">=2.0.36"
asyncpg = ">=0.29.0"
redis = ">=5.2.1"
orjson = ">=3.10.10"
email_validator = ">=2.2.0"
passlib = ">=1.7.4"
python-dotenv = ">=1.0.1"
httpx = ">=0.27.2"

# Supporting Libraries
aiofiles = ">=24.1.0"
aiosqlite = ">=0.20.0"
dnspython = ">=2.7.0"
requests = ">=2.32.3"
requests-toolbelt = ">=1.0.0"
beautifulsoup4 = ">=4.12.3"
soupsieve = ">=2.6"
pytz = ">=2024.2"
python-dateutil = ">=2.9.0.post0"
PyJWT = ">=2.9.0"

# Database Tools
alembic = ">=1.13.3"
psycopg2-binary = ">=2.9.9"
SQLAlchemy-Utils = ">=0.41.2"

# Utility Libraries
Jinja2 = ">=3.1.4"
PyYAML = ">=6.0.2"
werkzeug = ">=3.1.3"
transitions = ">=0.9.2"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["utils", "src"]

[tool.pylance]
python_version = "3.10"
exclude = [
    'src/migrations/',  # Exclude any paths you don't want to type check
]
ignore_missing_imports = true
check_untyped_defs = true

# Install the CLI tools
[project.scripts]
cs2-perms = "utils.permissions.cli:cli"
