[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs2-10mans-utils"
version = "0.1.0"
description = "Utility scripts for CS2 10mans system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"aiofiles==24.1.0",
"aiorcon==0.6.8",
"alembic==1.13.3",
"annotated-types==0.7.0",
"anyio==4.6.2.post1",
"async-generator==1.10",
"async-sqlmodel==0.1.3",
"asyncpg==0.29.0",
"beautifulsoup4==4.12.3",
"black==24.10.0",
"bs4==0.0.2",
"certifi==2024.8.30",
"charset-normalizer==3.4.0",
"click==8.1.7",
"colorama==0.4.6",
"defusedxml==0.7.1",
"distlib==0.3.9",
"dnspython==2.7.0",
"email_validator==2.2.0",
"Faker==33.3.1",
"fastapi==0.115.3",
"fastapi-cli==0.0.5",
"filelock==3.16.1",
"greenlet==3.1.1",
"h11==0.14.0",
"hatch==1.14.0",
"hatchling==1.27.0",
"httpcore==1.0.6",
"httptools==0.6.4",
"httpx==0.28.1",
"hyperlink==21.0.0",
"idna==3.10",
"iniconfig==2.0.0",
"itsdangerous==2.2.0",
"jaraco.classes==3.4.0",
"jaraco.context==6.0.1",
"jaraco.functools==4.1.0",
"Jinja2==3.1.4",
"keyring==25.6.0",
"Mako==1.3.6",
"markdown-it-py==3.0.0",
"MarkupSafe==3.0.2",
"mdurl==0.1.2",
"more-itertools==10.5.0",
"mypy-extensions==1.0.0",
"numpy==2.1.2",
"orjson==3.10.10",
"packaging==24.2",
"pandas==2.2.3",
"passlib==1.7.4",
"pathspec==0.12.1",
"pexpect==4.9.0",
"platformdirs==4.3.6",
"pluggy==1.5.0",
"psycopg2-binary==2.9.9",
"ptyprocess==0.7.0",
"pydantic==2.9.2",
"pydantic-extra-types==2.9.0",
"pydantic-settings==2.6.0",
"pydantic_core==2.23.4",
"Pygments==2.18.0",
"PyJWT==2.9.0",
"pyparsing==3.2.0",
"pytest==8.3.4",
"pytest-asyncio==0.25.2",
"python-dateutil==2.9.0.post0",
"python-dotenv==1.0.1",
"python-multipart==0.0.12",
"python3-openid==3.2.0",
"pytz==2024.2",
"pywin32-ctypes==0.2.3",
"PyYAML==6.0.2",
"redis==5.2.1",
"requests==2.32.3",
"requests-toolbelt==1.0.0",
"rich==13.9.3",
"shellingham==1.5.4",
"six==1.16.0",
"sniffio==1.3.1",
"soupsieve==2.6",
"SQLAlchemy==2.0.36",
"SQLAlchemy-Utils==0.41.2",
"sqlmodel==0.0.16",
"starlette==0.41.0",
"tomli_w==1.1.0",
"tomlkit==0.13.2",
"transitions==0.9.2",
"trove-classifiers==2025.1.10.15",
"typer==0.12.5",
"typing_extensions==4.12.2",
"tzdata==2024.2",
"ujson==5.10.0",
"urllib3==2.2.3",
"userpath==1.9.2",
"uv==0.5.18",
"uvicorn==0.32.0",
"virtualenv==20.28.1",
"watchfiles==0.24.0",
"websockets==13.1",
"Werkzeug==3.1.3",
"zstandard==0.23.0",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.pytest.ini_options]
pythonpath = [
    "src",  # Add the main project source to Python path
    "utils"  # Add the utils directory
]

# This ensures utils can import from src/
[tool.hatch.build]
dev-mode-dirs = ["src"]

# Development dependencies
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-env>=0.8.1",
    "coverage>=7.2.3",
    
    # Linting & Formatting
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "flake8>=6.0.0",
    "pylint>=2.17.3",
    
    # Type checking
    "types-redis>=4.5.5.1",
    "types-passlib>=1.7.7.12",
    "types-python-jose>=3.3.4.7",

    # Async development tools
    "watchfiles>=0.24.0",
]

test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

docs = [
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.2.1",
]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["utils", "src"]

[tool.pylance]
python_version = "3.10"
exclude = [
    'src/migrations/',  # Exclude any paths you don't want to type check
]
ignore_missing_imports = true
check_untyped_defs = true

# Install the CLI tools
[project.scripts]
cs2-perms = "utils.permissions.cli:cli"
